# sucre

./: .gitignore  .pdm-python  LICENSE  Makefile  README.md  pyproject.toml
src/sucre/: __init__.py
tests/: test_http_caller.py
