[project]
name = "sucre"
version = "0.1.0"
description = "A wrapper around the requests library"
authors = [
    {name = "Jorge Gueorguiev Garcia", email = "yefo.akira@twoormore.eu"},
]
dependencies = [
    "requests>=2.32.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "black>=24.4.2",
    "flake8>=7.1.0",
    "bandit>=1.7.9",
    "pytest-sugar>=1.0.0",
    "add-trailing-comma>=3.1.0",
    "isort>=5.13.2",
    "pytest-mock>=3.14.0",
]
lsp = [
    "python-lsp-server[flake8,pylint]>=1.11.0",
    "pylsp-rope>=0.1.16",
    "python-lsp-black>=2.0.0",
    "python-lsp-isort>=0.1",
]

[tool.pytest.ini_options]
addopts = "--cov-report term --cov-report html --cov-report xml"

[tool.coverage.report]
ignore_errors = false
skip_covered = true
fail_under = 85

[tool.coverage.html]
directory = ".reports/coverage/html"

[tool.coverage.xml]
output = ".reports/coverage/index.xml"

[tool.isort]
atomic = true
case_sensitive = true
combine_star = true
include_trailing_comma = true
indent = 4
line_length = 79
multi_line_output = 3
use_parentheses = true
